--- a/configure.ac
+++ b/configure.ac
@@ -103,37 +103,37 @@ for ext in mmx sse sse2 sse3 avx avx2; do
 done
 AC_SUBST(HAVE_CPU_MMX)
 AC_SUBST(CPU_MMX_CFLAGS)
-AM_CONDITIONAL([HAVE_CPU_MMX],[test x$HAVE_CPU_MMX = 1])
+AM_CONDITIONAL([HAVE_CPU_MMX],[test $HAVE_CPU_MMX = 1])
 AC_DEFINE_UNQUOTED([HAVE_CPU_MMX],[$HAVE_CPU_MMX],[Has MMX CPU extension])
 if test $HAVE_CPU_MMX = 1; then CPU_MMX_CFLAGS+=-mmmx; fi
 
 AC_SUBST(HAVE_CPU_SSE)
 AC_SUBST(CPU_SSE_CFLAGS)
-AM_CONDITIONAL([HAVE_CPU_SSE],[test x$HAVE_CPU_SSE = 1])
+AM_CONDITIONAL([HAVE_CPU_SSE],[test $HAVE_CPU_SSE = 1])
 AC_DEFINE_UNQUOTED([HAVE_CPU_SSE],[$HAVE_CPU_SSE],[Has SSE CPU extension])
 if test $HAVE_CPU_SSE = 1; then CPU_SSE_CFLAGS+=-msse; fi
 
 AC_SUBST(HAVE_CPU_SSE2)
 AC_SUBST(CPU_SSE2_CFLAGS)
-AM_CONDITIONAL([HAVE_CPU_SSE2],[test x$HAVE_CPU_SSE2 = 1])
+AM_CONDITIONAL([HAVE_CPU_SSE2],[test $HAVE_CPU_SSE2 = 1])
 AC_DEFINE_UNQUOTED([HAVE_CPU_SSE2],[$HAVE_CPU_SSE2],[Has SSE2 CPU extension])
 if test $HAVE_CPU_SSE2 = 1; then CPU_SSE2_CFLAGS+=-msse2; fi
 
 AC_SUBST(HAVE_CPU_SSE3)
 AC_SUBST(CPU_SSE3_CFLAGS)
-AM_CONDITIONAL([HAVE_CPU_SSE3],[test x$HAVE_CPU_SSE3 = 1])
+AM_CONDITIONAL([HAVE_CPU_SSE3],[test $HAVE_CPU_SSE3 = 1])
 AC_DEFINE_UNQUOTED([HAVE_CPU_SSE3],[$HAVE_CPU_SSE3],[Has SSE3 CPU extension])
 if test $HAVE_CPU_SSE3 = 1; then CPU_SSE3_CFLAGS+=-msse3; fi
 
 AC_SUBST(HAVE_CPU_AVX)
 AC_SUBST(CPU_AVX_CFLAGS)
-AM_CONDITIONAL([HAVE_CPU_AVX],[test x$HAVE_CPU_AVX = 1])
+AM_CONDITIONAL([HAVE_CPU_AVX],[test $HAVE_CPU_AVX = 1])
 AC_DEFINE_UNQUOTED([HAVE_CPU_AVX],[$HAVE_CPU_AVX],[Has AVX CPU extension])
 if test $HAVE_CPU_AVX = 1; then CPU_AVX_CFLAGS+=-mavx; fi
 
 AC_SUBST(HAVE_CPU_AVX2)
 AC_SUBST(CPU_AVX2_CFLAGS)
-AM_CONDITIONAL([HAVE_CPU_AVX2],[test x$HAVE_CPU_AVX2 = 1])
+AM_CONDITIONAL([HAVE_CPU_AVX2],[test $HAVE_CPU_AVX2 = 1])
 AC_DEFINE_UNQUOTED([HAVE_CPU_AVX2],[$HAVE_CPU_AVX2],[Has AVX2 CPU extension])
 if test $HAVE_CPU_AVX2 = 1; then CPU_AVX2_CFLAGS+=-mavx2; fi
 
@@ -148,7 +148,7 @@ AC_CHECK_DECLS([isinf isnan],[],[],[[#include <math.h>]])
 # we use yasm
 AC_SUBST(HAVE_YASM)
 AC_CHECK_PROG([HAVE_YASM],[yasm],[1],[0])
-AM_CONDITIONAL([HAVE_YASM],[test x$HAVE_YASM = 1])
+AM_CONDITIONAL([HAVE_YASM],[test $HAVE_YASM = 1])
 AC_DEFINE_UNQUOTED([HAVE_YASM],[$HAVE_YASM],[Has YASM])
 
 # GCC __builtin_cpu_init and other functions
@@ -167,7 +167,7 @@ AC_TRY_LINK([#include <cpuid.h>],
     [
         AC_MSG_RESULT([no])
     ])
-AM_CONDITIONAL([HAVE_GCC_BUILTIN_CPU],[test x$HAVE_GCC_BUILTIN_CPU = 1])
+AM_CONDITIONAL([HAVE_GCC_BUILTIN_CPU],[test $HAVE_GCC_BUILTIN_CPU = 1])
 AC_DEFINE_UNQUOTED([HAVE_GCC_BUILTIN_CPU],[$HAVE_GCC_BUILTIN_CPU],[Has GCC builtin_cpu functions])
 
 # we have to work at checking for clock_gettime
@@ -193,7 +193,7 @@ AC_TRY_LINK([#include <time.h>],
         old_CXXFLAGS=$CXXFLAGS
         old_CFLAGS=$CFLAGS
     ])
-AM_CONDITIONAL([HAVE_CLOCK_GETTIME],[test x$HAVE_CLOCK_GETTIME = 1])
+AM_CONDITIONAL([HAVE_CLOCK_GETTIME],[test $HAVE_CLOCK_GETTIME = 1])
 AC_DEFINE_UNQUOTED([HAVE_CLOCK_GETTIME],[$HAVE_CLOCK_GETTIME],[Has clock_gettime])
 
 # make sure the target CPU uses signed 2's complement integers.
@@ -218,7 +218,7 @@ AC_TRY_LINK([ ],
         old_CXXFLAGS=$CXXFLAGS
         old_CFLAGS=$CFLAGS
     ])
-AM_CONDITIONAL([HAVE_TARGET_2S_COMPLEMENT],[test x$HAVE_TARGET_2S_COMPLEMENT = 1])
+AM_CONDITIONAL([HAVE_TARGET_2S_COMPLEMENT],[test $HAVE_TARGET_2S_COMPLEMENT = 1])
 AC_DEFINE_UNQUOTED([HAVE_TARGET_2S_COMPLEMENT],[$HAVE_TARGET_2S_COMPLEMENT],[Has 2s complement host integer format])
 
 # test whether the target CPU repeats the sign bit when shifting signed values to the right.
@@ -244,70 +244,70 @@ AC_TRY_LINK([ ],
         old_CXXFLAGS=$CXXFLAGS
         old_CFLAGS=$CFLAGS
     ])
-AM_CONDITIONAL([HAVE_TARGET_SIGNED_RIGHT_SHIFT],[test x$HAVE_TARGET_SIGNED_RIGHT_SHIFT = 1])
+AM_CONDITIONAL([HAVE_TARGET_SIGNED_RIGHT_SHIFT],[test $HAVE_TARGET_SIGNED_RIGHT_SHIFT = 1])
 AC_DEFINE_UNQUOTED([HAVE_TARGET_SIGNED_RIGHT_SHIFT],[$HAVE_TARGET_SIGNED_RIGHT_SHIFT],[Has 2s complement host integer format])
 
 # Does Linux have sys/vm86.h for virtual 8086 mode?
 HAVE_SYS_VM86_H=0
 AC_SUBST(HAVE_SYS_VM86_H)
 AC_CHECK_HEADER([sys/vm86.h],[HAVE_SYS_VM86_H=1],[HAVE_SYS_VM86_H=0])
-AM_CONDITIONAL([HAVE_SYS_VM86_H],[test x$HAVE_SYS_VM86_H = 1])
+AM_CONDITIONAL([HAVE_SYS_VM86_H],[test $HAVE_SYS_VM86_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_SYS_VM86_H],[$HAVE_SYS_VM86_H],[Has sys/vm86.h])
 
 # Does Linux have sys/ptrace.h?
 HAVE_SYS_PTRACE_H=0
 AC_SUBST(HAVE_SYS_PTRACE_H)
 AC_CHECK_HEADER([sys/ptrace.h],[HAVE_SYS_PTRACE_H=1],[HAVE_SYS_PTRACE_H=0])
-AM_CONDITIONAL([HAVE_SYS_PTRACE_H],[test x$HAVE_SYS_PTRACE_H = 1])
+AM_CONDITIONAL([HAVE_SYS_PTRACE_H],[test $HAVE_SYS_PTRACE_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_SYS_PTRACE_H],[$HAVE_SYS_PTRACE_H],[Has sys/ptrace.h])
 
 # Does Linux have asm/ldt.h for the modify_ldt syscall?
 HAVE_ASM_LDT_H=0
 AC_SUBST(HAVE_ASM_LDT_H)
 AC_CHECK_HEADER([asm/ldt.h],[HAVE_ASM_LDT_H=1],[HAVE_ASM_LDT_H=0])
-AM_CONDITIONAL([HAVE_ASM_LDT_H],[test x$HAVE_ASM_LDT_H = 1])
+AM_CONDITIONAL([HAVE_ASM_LDT_H],[test $HAVE_ASM_LDT_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_ASM_LDT_H],[$HAVE_ASM_LDT_H],[Has asm/ldt.h])
 
 # Does Linux have linux/kvm.h for KVM support?
 HAVE_LINUX_KVM_H=0
 AC_SUBST(HAVE_LINUX_KVM_H)
 AC_CHECK_HEADER([linux/kvm.h],[HAVE_LINUX_KVM_H=1],[HAVE_LINUX_KVM_H=0])
-AM_CONDITIONAL([HAVE_LINUX_KVM_H],[test x$HAVE_LINUX_KVM_H = 1])
+AM_CONDITIONAL([HAVE_LINUX_KVM_H],[test $HAVE_LINUX_KVM_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_LINUX_KVM_H],[$HAVE_LINUX_KVM_H],[Has linux/kvm.h])
 
 # Does Linux have sys/prctl.h?
 HAVE_SYS_PRCTL_H=0
 AC_SUBST(HAVE_SYS_PRCTL_H)
 AC_CHECK_HEADER([sys/prctl.h],[HAVE_SYS_PRCTL_H=1],[HAVE_SYS_PRCTL_H=0])
-AM_CONDITIONAL([HAVE_SYS_PRCTL_H],[test x$HAVE_SYS_PRCTL_H = 1])
+AM_CONDITIONAL([HAVE_SYS_PRCTL_H],[test $HAVE_SYS_PRCTL_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_SYS_PRCTL_H],[$HAVE_SYS_PRCTL_H],[Has sys/prctl.h])
 
 # Does your compiler have mmintrin.h (MMX intrinsics)?
 HAVE_MMINTRIN_H=0
 AC_SUBST(HAVE_MMINTRIN_H)
 AC_CHECK_HEADER([mmintrin.h],[HAVE_MMINTRIN_H=1],[HAVE_MMINTRIN_H=0])
-AM_CONDITIONAL([HAVE_MMINTRIN_H],[test x$HAVE_MMINTRIN_H = 1])
+AM_CONDITIONAL([HAVE_MMINTRIN_H],[test $HAVE_MMINTRIN_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_MMINTRIN_H],[$HAVE_MMINTRIN_H],[Has mmintrin.h])
 
 # Does your compiler have xmmintrin.h (SSE intrinsics)?
 HAVE_XMMINTRIN_H=0
 AC_SUBST(HAVE_XMMINTRIN_H)
 AC_CHECK_HEADER([xmmintrin.h],[HAVE_XMMINTRIN_H=1],[HAVE_XMMINTRIN_H=0])
-AM_CONDITIONAL([HAVE_XMMINTRIN_H],[test x$HAVE_XMMINTRIN_H = 1])
+AM_CONDITIONAL([HAVE_XMMINTRIN_H],[test $HAVE_XMMINTRIN_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_XMMINTRIN_H],[$HAVE_XMMINTRIN_H],[Has xmmintrin.h])
 
 # Does your compiler have immintrin.h (AVX intrinsics)?
 HAVE_IMMINTRIN_H=0
 AC_SUBST(HAVE_IMMINTRIN_H)
 AC_CHECK_HEADER([immintrin.h],[HAVE_IMMINTRIN_H=1],[HAVE_IMMINTRIN_H=0])
-AM_CONDITIONAL([HAVE_IMMINTRIN_H],[test x$HAVE_IMMINTRIN_H = 1])
+AM_CONDITIONAL([HAVE_IMMINTRIN_H],[test $HAVE_IMMINTRIN_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_IMMINTRIN_H],[$HAVE_IMMINTRIN_H],[Has immintrin.h])
 
 # Does your compiler have avxintrin.h (AVX intrinsics)?
 HAVE_AVXINTRIN_H=0
 AC_SUBST(HAVE_AVXINTRIN_H)
 AC_CHECK_HEADER([avxintrin.h],[HAVE_AVXINTRIN_H=1],[HAVE_AVXINTRIN_H=0])
-AM_CONDITIONAL([HAVE_AVXINTRIN_H],[test x$HAVE_AVXINTRIN_H = 1])
+AM_CONDITIONAL([HAVE_AVXINTRIN_H],[test $HAVE_AVXINTRIN_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_AVXINTRIN_H],[$HAVE_AVXINTRIN_H],[Has avxintrin.h])
 
 # X11
@@ -328,7 +328,7 @@ if test "$with_x11" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_X11],[$HAVE_X11],[Has X11])
-AM_CONDITIONAL([HAVE_X11],[test x$HAVE_X11 = 1])
+AM_CONDITIONAL([HAVE_X11],[test $HAVE_X11 = 1])
 
 # X11-XCB
 HAVE_X11_XCB=0
@@ -348,7 +348,7 @@ if test "$with_x11_xcb" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_X11_XCB],[$HAVE_X11_XCB],[Has X11 XCB])
-AM_CONDITIONAL([HAVE_X11_XCB],[test x$HAVE_X11_XCB = 1])
+AM_CONDITIONAL([HAVE_X11_XCB],[test $HAVE_X11_XCB = 1])
 
 # XCB
 HAVE_XCB=0
@@ -368,7 +368,7 @@ if test "$with_xcb" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_XCB],[$HAVE_XCB],[Has XCB])
-AM_CONDITIONAL([HAVE_XCB],[test x$HAVE_XCB = 1])
+AM_CONDITIONAL([HAVE_XCB],[test $HAVE_XCB = 1])
 
 # XCB-XV
 HAVE_XCB_XV=0
@@ -388,7 +388,7 @@ if test "$with_xcb_xv" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_XCB_XV],[$HAVE_XCB_XV],[Has XCB xv])
-AM_CONDITIONAL([HAVE_XCB_XV],[test x$HAVE_XCB_XV = 1])
+AM_CONDITIONAL([HAVE_XCB_XV],[test $HAVE_XCB_XV = 1])
 
 # XCB_SHM
 HAVE_XCB_SHM=0
@@ -408,7 +408,7 @@ if test "$with_xcb_shm" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_XCB_SHM],[$HAVE_XCB_SHM],[Has XCB SHM])
-AM_CONDITIONAL([HAVE_XCB_SHM],[test x$HAVE_XCB_SHM = 1])
+AM_CONDITIONAL([HAVE_XCB_SHM],[test $HAVE_XCB_SHM = 1])
 
 # XCB_XKB
 HAVE_XCB_XKB=0
@@ -428,7 +428,7 @@ if test "$with_xcb_xkb" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_XCB_XKB],[$HAVE_XCB_XKB],[Has XCB XKB])
-AM_CONDITIONAL([HAVE_XCB_XKB],[test x$HAVE_XCB_XKB = 1])
+AM_CONDITIONAL([HAVE_XCB_XKB],[test $HAVE_XCB_XKB = 1])
 
 # ALSA
 HAVE_ALSA=0
@@ -448,7 +448,7 @@ if test "$with_alsa" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_ALSA],[$HAVE_ALSA],[Has ALSA])
-AM_CONDITIONAL([HAVE_ALSA],[test x$HAVE_ALSA = 1])
+AM_CONDITIONAL([HAVE_ALSA],[test $HAVE_ALSA = 1])
 
 # LIBDRM
 HAVE_LIBDRM=0
@@ -468,7 +468,7 @@ if test "$with_libdrm" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_LIBDRM],[$HAVE_LIBDRM],[Has libdrm])
-AM_CONDITIONAL([HAVE_LIBDRM],[test x$HAVE_LIBDRM = 1])
+AM_CONDITIONAL([HAVE_LIBDRM],[test $HAVE_LIBDRM = 1])
 
 # OpenGL
 HAVE_OPENGL=0
@@ -488,7 +488,7 @@ if test "$with_gl" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_OPENGL],[$HAVE_OPENGL],[Has OpenGL])
-AM_CONDITIONAL([HAVE_OPENGL],[test x$HAVE_OPENGL = 1])
+AM_CONDITIONAL([HAVE_OPENGL],[test $HAVE_OPENGL = 1])
 
 # OpenGL GLU
 HAVE_OPENGL_GLU=0
@@ -508,7 +508,7 @@ if test "$with_glu" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_OPENGL_GLU],[$HAVE_OPENGL_GLU],[Has OpenGL GLU])
-AM_CONDITIONAL([HAVE_OPENGL_GLU],[test x$HAVE_OPENGL_GLU = 1])
+AM_CONDITIONAL([HAVE_OPENGL_GLU],[test $HAVE_OPENGL_GLU = 1])
 
 # OpenGL GLEW
 HAVE_OPENGL_GLEW=0
@@ -528,7 +528,7 @@ if test "$with_glew" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_OPENGL_GLEW],[$HAVE_OPENGL_GLEW],[Has OpenGL GLEW])
-AM_CONDITIONAL([HAVE_OPENGL_GLEW],[test x$HAVE_OPENGL_GLEW = 1])
+AM_CONDITIONAL([HAVE_OPENGL_GLEW],[test $HAVE_OPENGL_GLEW = 1])
 
 # OpenGL EGL
 HAVE_OPENGL_EGL=0
@@ -548,7 +548,7 @@ if test "$with_egl" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_OPENGL_EGL],[$HAVE_OPENGL_EGL],[Has OpenGL EGL])
-AM_CONDITIONAL([HAVE_OPENGL_EGL],[test x$HAVE_OPENGL_EGL = 1])
+AM_CONDITIONAL([HAVE_OPENGL_EGL],[test $HAVE_OPENGL_EGL = 1])
 
 # ZLIB
 HAVE_ZLIB=0
@@ -568,7 +568,7 @@ if test "$with_zlib" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_ZLIB],[$HAVE_ZLIB],[Has ZLIB])
-AM_CONDITIONAL([HAVE_ZLIB],[test x$HAVE_ZLIB = 1])
+AM_CONDITIONAL([HAVE_ZLIB],[test $HAVE_ZLIB = 1])
 
 # LZMA
 HAVE_LZMA=0
@@ -588,7 +588,7 @@ if test "$with_lzma" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_LZMA],[$HAVE_LZMA],[Has LZMA])
-AM_CONDITIONAL([HAVE_LZMA],[test x$HAVE_LZMA = 1])
+AM_CONDITIONAL([HAVE_LZMA],[test $HAVE_LZMA = 1])
 
 # FFMPEG avcodec
 HAVE_FFMPEG_AVCODEC=0
@@ -608,7 +608,7 @@ if test "$with_ffmpeg" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_FFMPEG_AVCODEC],[$HAVE_FFMPEG_AVCODEC],[Has FFMPEG_AVCODEC])
-AM_CONDITIONAL([HAVE_FFMPEG_AVCODEC],[test x$HAVE_FFMPEG_AVCODEC = 1])
+AM_CONDITIONAL([HAVE_FFMPEG_AVCODEC],[test $HAVE_FFMPEG_AVCODEC = 1])
 
 # FFMPEG avformat
 HAVE_FFMPEG_AVFORMAT=0
@@ -627,7 +627,7 @@ if test "$with_ffmpeg" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_FFMPEG_AVFORMAT],[$HAVE_FFMPEG_AVFORMAT],[Has FFMPEG_AVFORMAT])
-AM_CONDITIONAL([HAVE_FFMPEG_AVFORMAT],[test x$HAVE_FFMPEG_AVFORMAT = 1])
+AM_CONDITIONAL([HAVE_FFMPEG_AVFORMAT],[test $HAVE_FFMPEG_AVFORMAT = 1])
 
 # FFMPEG avutil
 HAVE_FFMPEG_AVUTIL=0
@@ -646,7 +646,7 @@ if test "$with_ffmpeg" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_FFMPEG_AVUTIL],[$HAVE_FFMPEG_AVUTIL],[Has FFMPEG_AVUTIL])
-AM_CONDITIONAL([HAVE_FFMPEG_AVUTIL],[test x$HAVE_FFMPEG_AVUTIL = 1])
+AM_CONDITIONAL([HAVE_FFMPEG_AVUTIL],[test $HAVE_FFMPEG_AVUTIL = 1])
 
 # FFMPEG swscale
 HAVE_FFMPEG_SWSCALE=0
@@ -666,7 +666,7 @@ if test "$with_ffmpeg_swscale" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_FFMPEG_SWSCALE],[$HAVE_FFMPEG_SWSCALE],[Has FFMPEG_SWSCALE])
-AM_CONDITIONAL([HAVE_FFMPEG_SWSCALE],[test x$HAVE_FFMPEG_SWSCALE = 1])
+AM_CONDITIONAL([HAVE_FFMPEG_SWSCALE],[test $HAVE_FFMPEG_SWSCALE = 1])
 
 # Simple Directmedia Layer 1.x
 HAVE_SDL1=0
@@ -686,7 +686,7 @@ if test "$with_sdl1" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_SDL1],[$HAVE_SDL1],[Has SDL1])
-AM_CONDITIONAL([HAVE_SDL1],[test x$HAVE_SDL1 = 1])
+AM_CONDITIONAL([HAVE_SDL1],[test $HAVE_SDL1 = 1])
 
 # Simple Directmedia Layer 2.x
 HAVE_SDL2=0
@@ -706,7 +706,7 @@ if test "$with_sdl2" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_SDL2],[$HAVE_SDL2],[Has SDL2])
-AM_CONDITIONAL([HAVE_SDL2],[test x$HAVE_SDL2 = 1])
+AM_CONDITIONAL([HAVE_SDL2],[test $HAVE_SDL2 = 1])
 
 # libpng
 HAVE_LIBPNG=0
@@ -726,7 +726,7 @@ if test "$with_libpng" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_LIBPNG],[$HAVE_LIBPNG],[Has LIBPNG])
-AM_CONDITIONAL([HAVE_LIBPNG],[test x$HAVE_LIBPNG = 1])
+AM_CONDITIONAL([HAVE_LIBPNG],[test $HAVE_LIBPNG = 1])
 
 # libjpeg
 HAVE_LIBJPEG=0
@@ -751,7 +751,7 @@ if test "$with_libjpeg" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_LIBJPEG],[$HAVE_LIBJPEG],[Has LIBJPEG])
-AM_CONDITIONAL([HAVE_LIBJPEG],[test x$HAVE_LIBJPEG = 1])
+AM_CONDITIONAL([HAVE_LIBJPEG],[test $HAVE_LIBJPEG = 1])
 
 # freetype2
 HAVE_FREETYPE2=0
@@ -771,7 +771,7 @@ if test "$with_freetype2" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_FREETYPE2],[$HAVE_FREETYPE2],[Has FREETYPE2])
-AM_CONDITIONAL([HAVE_FREETYPE2],[test x$HAVE_FREETYPE2 = 1])
+AM_CONDITIONAL([HAVE_FREETYPE2],[test $HAVE_FREETYPE2 = 1])
 
 # fontconfig
 HAVE_FONTCONFIG=0
@@ -791,7 +791,7 @@ if test "$with_fontconfig" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_FONTCONFIG],[$HAVE_FONTCONFIG],[Has FONTCONFIG])
-AM_CONDITIONAL([HAVE_FONTCONFIG],[test x$HAVE_FONTCONFIG = 1])
+AM_CONDITIONAL([HAVE_FONTCONFIG],[test $HAVE_FONTCONFIG = 1])
 
 # cairo
 HAVE_CAIRO=0
@@ -811,7 +811,7 @@ if test "$with_cairo" = "yes"; then
     fi
 fi
 AC_DEFINE_UNQUOTED([HAVE_CAIRO],[$HAVE_CAIRO],[Has CAIRO])
-AM_CONDITIONAL([HAVE_CAIRO],[test x$HAVE_CAIRO = 1])
+AM_CONDITIONAL([HAVE_CAIRO],[test $HAVE_CAIRO = 1])
 
 AC_CONFIG_FILES(Makefile)
 AC_OUTPUT
