fix AC_CHECK_DECLS, functions must be separated by comma

--- a/configure.ac
+++ b/configure.ac
@@ -143,7 +143,7 @@ AC_SUBST(LDFLAGS)
 
 # important functions
 AC_CHECK_FUNCS([nanosleep usleep lseek64 lseeki64 truncate ftruncate openat renameat symlink link stat fstat fstatat statfs fstatfs realpath sysconf mmap munmap getpagesize mincore mlock munlock mprotect mremap msync getrlimit setrlimit shmat shm_open remap_file_pages fallocate readlink readlinkat signal sigaction alarm pause sigprocmask sigaddset sigemptyset sigismember])
-AC_CHECK_DECLS([isinf isnan],[],[],[[#include <math.h>]])
+AC_CHECK_DECLS([isinf, isnan],[],[],[[#include <math.h>]])
 
 # we use yasm
 AC_SUBST(HAVE_YASM)
