CentOS 7: Need _BSD_SOURCE to test le32toh and endian functions

--- a/configure.ac
+++ b/configure.ac
@@ -27,7 +27,7 @@ fi
 AC_SYS_LARGEFILE
 
 # this code uses POSIX functions
-POSIX_DEF=" -D_POSIX_C_SOURCE=200809L"
+POSIX_DEF=" -D_POSIX_C_SOURCE=200809L -D_BSD_SOURCE"
 CFLAGS+="$POSIX_DEF"
 CPPFLAGS+="$POSIX_DEF"
 CXXFLAGS+="$POSIX_DEF"
