disable MMX in test program if MMX not available

--- a/Makefile.am
+++ b/Makefile.am
@@ -127,8 +127,10 @@ bin_test_xlib1_LDADD = $(X11_LDFLAGS) $(XEXT_LDFLAGS)
 
 bin_test_xlib2_SOURCES = test/xlib2.cpp
 bin_test_xlib2_CXXFLAGS = $(AM_CXXFLAGS) $(X11_CFLAGS) $(XEXT_CFLAGS)
-bin_test_xlib2_DEPENDENCIES =
-bin_test_xlib2_LDADD = $(X11_LDFLAGS) $(XEXT_LDFLAGS)
+bin_test_xlib2_DEPENDENCIES = \
+	dosboxxr/lib/hostcpudetect/libhostcpudetect.a \
+	dosboxxr/lib/text/libtext.a
+bin_test_xlib2_LDADD = $(X11_LDFLAGS) $(XEXT_LDFLAGS) dosboxxr/lib/hostcpudetect/libhostcpudetect.a dosboxxr/lib/text/libtext.a
 
 bin_test_xcb1_SOURCES = test/xcb1.cpp
 bin_test_xcb1_CXXFLAGS = $(AM_CXXFLAGS) $(X11_CFLAGS) $(XEXT_CFLAGS) $(X11_XCB_CFLAGS) $(XCB_SHM_CFLAGS)
